--- a/.github/ISSUE_TEMPLATE/bt.yml
+++ b/.github/ISSUE_TEMPLATE/bt.yml
@@ -1,9 +1,7 @@
-name: Bug Report
-description: File a bug report
+name: Zgłoszenie 
+description: Formularz zgłoszenia defektu
 title: "[Bug]: "
-labels: ["bug", "triage"]
-assignees:
-  - octocat
+labels: ["bug"]
 body:
   - type: markdown
     attributes:
