--- a/.github/ISSUE_TEMPLATE/bt.yml
+++ b/.github/ISSUE_TEMPLATE/bt.yml
@@ -1,4 +1,4 @@
-name: Zgłoszenie 
+name: BugTemplate 
 description: Formularz zgłoszenia defektu
 title: "[Bug]: "
 labels: ["bug"]
@@ -6,21 +6,21 @@ body:
   - type: markdown
     attributes:
       value: |
-        Thanks for taking the time to fill out this bug report!
+        Wypełnij starannie wszystkie poniższe pola. Precyzyjnie opisany błąd pozwoli na szybsze rozwiązanie problemu.
   - type: input
-    id: contact
+    id: appTransaction
     attributes:
-      label: Contact Details
-      description: How can we get in touch with you if we need more info?
-      placeholder: ex. email@example.com
+      label: Aplikacja/ Transakcja
+      description: Wprowadź nazwe aplikacji lub transakcji
+      placeholder: BP, FPP3
     validations:
-      required: false
+      required: true
   - type: textarea
-    id: what-happened
+    id: descripiton
     attributes:
-      label: What happened?
-      description: Also tell us, what did you expect to happen?
-      placeholder: Tell us what you see!
+      label: Opis błędu
+      description: <table><tr><td>test</td></tr></table>
+      placeholder: 
       value: "A bug happened!"
     validations:
       required: true
