--- a/.github/ISSUE_TEMPLATE/bt.yml
+++ b/.github/ISSUE_TEMPLATE/bt.yml
@@ -7,9 +7,7 @@ labels:
 body:
   - type: markdown
     attributes:
-      value: >
-        Wypełnij starannie wszystkie poniższe pola. Precyzyjnie opisany błąd
-        pozwoli na szybsze rozwiązanie problemu.
+      value: Wypełnij starannie wszystkie poniższe pola. Precyzyjnie opisany błąd pozwoli na szybsze rozwiązanie problemu.
   - type: dropdown
     id: priorytet
     attributes: null
