--- a/.github/ISSUE_TEMPLATE/bt.yml
+++ b/.github/ISSUE_TEMPLATE/bt.yml
@@ -38,6 +38,15 @@ body:
       placeholder: BP, FPP3
     validations:
       required: true
+- type: input
+    id: issueRelation
+    attributes:
+      label: Powiązane zgłoszenia
+      description: Wprowadź numer powiązanych zgłoszeń 
+      placeholder: #3
+    validations:
+      required: true
+
   - type: textarea
     id: descripiton
     attributes:
