--- a/.github/ISSUE_TEMPLATE/testCaseTemplate.yml
+++ b/.github/ISSUE_TEMPLATE/testCaseTemplate.yml
@@ -2,6 +2,7 @@ name: TestCaseTemplate
 description: Formularz zgłoszenia defektu
 title: "[TestCase]: "
 labels: ["test-case"]
+status: ["Backlog"]
 body:
   - type: markdown
     attributes:
