--- a/.github/ISSUE_TEMPLATE/testScenariousTemplate.yml
+++ b/.github/ISSUE_TEMPLATE/testScenariousTemplate.yml
@@ -1,7 +1,7 @@
 name: TestScenariousTemplate 
 description: Formularz zgłoszenia defektu
 title: "[TestScenarious]: "
-labels: ["test-scenarious"]
+labels: ["test-scen"]
 body:
   - type: markdown
     attributes:
